# rog-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_DBUS.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
aura/: Cargo.toml
aura/examples/: animatrix.rs  ball.rs  comet.rs  iterate-keys.rs  per-key-effect-2.rs  pulser.rs
aura/src/: animatrix_dbus.rs  anime_matrix.rs  aura_dbus.rs  builtins.rs  cli_options.rs  error.rs  fancy.rs  lib.rs
data/: rog-core.conf  rog-core.rules  rog-core.service  rogcore.conf
debian/: changelog  control  copyright  rog-core.postinst  rog-core.postrm
examples/: per-key-effect-2.rs  per-key-effect.rs
kernel-patch/: 0001-HID-asus-add-support-for-ASUS-N-Key-keyboard-v5.7.patch  0001-HID-asus-add-support-for-ASUS-N-Key-keyboard-v5.8.patch
reverse_eng/: asus-fan-p1.patch  per_key_raw_bytes.ods
reverse_eng/dsl/: FA506IV.dsl  G531GW.dsl  G731GV.dsl  GA401IU.dsl  GA502IU.dsl  GA502IV.dsl  GX502GW.dsl
reverse_eng/g512lu/: details
reverse_eng/g531/: g531-led1.pcapng  g531-led2.pcapng  g531-led3.pcapng  g531-led4.pcapng  g531-led5.pcapng  g531-led6.pcapng  g531gw-lightzones-turnedoff.pcapng  g531gw-lightzones-turnedon.pcapng  g531gw-onlylightbars-turnedon.pcapng  g531gw-onlylogo-turnedon.pcapng  lightbars.txt
reverse_eng/g531/keys/: allkeyswhite.pcapng  enter.pcapng  missingkeys.txt  rog.pcapng  rshift.pcapng
reverse_eng/g712/: laptop_info  system_info
reverse_eng/ga401/: GA401IV.md  anime_matrix_lightning_start_and_white_full_on.pcap  hid_desc_consumer_GA401IV_GA401IV.md  hid_desc_keyboad_GA401IV_GA401IV.md  hid_desc_other_GA401IV_GA401IV.md  lsusb_GA401IV_GA401IV.md
reverse_eng/ga502/: dmi_info
reverse_eng/gm501/: zephyrusgm501_info.txt
reverse_eng/gu502/: laptop_info
reverse_eng/gx501/: per_key_raw_bytes.ods  rog_starry_night.pcapng
reverse_eng/gx501/gx502-other-kb-functions/: screen-out-select-2.4.3-2.4.2.pcapng
reverse_eng/gx501/gx502-rgb-wireshark/: gx502-rgb-breathe-to-pulse.pcapng
reverse_eng/gx502/gx502-rgb-selecting/: gx502-rgb-open-crate.pcapng
rog-client/: Cargo.toml
rog-client/examples/: animatrix.rs  ball.rs  comet.rs  iterate-keys.rs  per-key-effect-2.rs  pulser.rs
rog-client/src/: animatrix_dbus.rs  anime_dbus.rs  anime_matrix.rs  aura_dbus.rs  aura_modes.rs  builtins.rs  cli_options.rs  core_dbus.rs  error.rs  lib.rs
rog-core/: Cargo.toml
rog-core/src/: animatrix_control.rs  config.rs  core.rs  ctrl_anime.rs  ctrl_charge.rs  ctrl_fan_cpu.rs  ctrl_leds.rs  daemon.rs  dbus.rs  error.rs  laptops.rs  led_control.rs  lib.rs  main.rs  rog_dbus.rs  rogcore.rs  virt_device.rs
rog-core/src/laptops/: mod.rs
rog-lib/: Cargo.toml
rog-lib/src/: aura.rs  cli_options.rs  config.rs  core.rs  error.rs  hotkeys.rs  laptops.rs  lib.rs  virt_device.rs
src/: aura.rs  cli_options.rs  config.rs  core.rs  daemon.rs  error.rs  laptops.rs  lib.rs  main.rs
src/laptops/: gl753.rs  gx502.rs  gx502gw.rs  mod.rs
wireshark_data/: asus-fan-p2.patch  per_key_raw_bytes  rog-star-colour.pcapng  rog-star-random.pcapng  rog_starry_night_brighter.pcapng
wireshark_data/gm501/: lsusbinfo.sysclassname.txt  usb-hid-dump.txt
wireshark_data/gx501/: rog_music_not_playing.pcapng
wireshark_data/gx501/gx502-rgb-selecting/: gx502-rgb-black-red-orange-yellow-green-lblue-blue-mag-black.pcapng
wireshark_data/gx502-other-kb-functions/: airplane-mode-on-off-2.4.3.pcapng  fan-button-2.4.3.pcapng  screen-bright-2.4.3from.pcapng  screen-off-on-button-2.4.3.pcapng  trackpad-off-on.pcapng
wireshark_data/gx502-rgb-selecting/: gx502-rgb-dark-select-static-red.pcapng  gx502-rgb-select-breathing.pcapng  gx502-rgb-select-rainbow.pcapng
wireshark_data/gx502-rgb-wireshark/: gx502-rgb-breathe.pcapng  gx502-rgb-bright-1.pcapng  gx502-rgb-bright-2.pcapng  gx502-rgb-bright-3.pcapng  gx502-rgb-colour-cycle-to-rainbow.pcapng  gx502-rgb-pulse-to-colour-cycle.pcapng  gx502-rgb-rainbow-to-static.pcapng
