[package]
name = "rog-daemon"
version = "0.6.1"
authors = ["Luke <luke@ljones.dev>"]
edition = "2018"

[lib]
name = "daemon"
path = "src/lib.rs"

[[bin]]
name = "rog-core"
path = "src/main.rs"

[dependencies]
rusb = "^0.5.5"
gumdrop = "^0.8.0"
dbus = "^0.7.1"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
sysfs-class = "^0.1.2"
aho-corasick = "^0.7.10"
thiserror = "^1.0.15"
log = "^0.4.8"
uhid-virt = "^0.0.4"
#keycode = "0.3"
env_logger = "^0.7.1"