[package]
name = "rog-core"
version = "0.3.2"
authors = ["Luke <luke@ljones.dev>"]
edition = "2018"

[dependencies]
gumdrop = "0.8"
dbus = "0.7"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.7"
rog-lib = { path = "../rog-lib" }
tokio-linux-uhid = "0.3"
tokio-core = "0.1.17"
tokio-io = "0.1.13"